<resources>
    <string name="pref_locale">nl</string>
    <string name="app_name">Merchant</string>

    <string name="check_in_with_email">ОТМЕТИТЬСЯ УКАЗАВ E-MAIL</string>
    <string name="take_card_or_sign_up">Возьмите карту или зарегистрируйтесь на сайте</string>
    <string name="scan_qr_or_from_site">Отсканируйте QR-код с карты или с сайта</string>
    <string name="get_rewards">Получайте награды за посещения</string>
    <string name="visits">Посещения</string>
    <string name="rewards">Награды</string>
    <string name="tab_to_start">НАЖМИТЕ ЧТОБЫ НАЧАТЬ</string>
    <string name="you_have_new_card">У вас новая карта</string>
    <string name="old_card_end">Ваша старая карта деактивирована, и теперь накапливать посещения и получать награды вы сможете с помощью новой</string>
    <string name="good">ОТЛИЧНО!</string>
    <string name="lekke_rewards">LekkerRewards</string>
    <string name="welcome_back">С возвращением,</string>
    <string name="total_visits">Всего посещений:</string>
    <string name="total_redeems">Всего наград:</string>
    <string name="available_visits">Доступные посещения:</string>
    <string name="visists">Посещения</string>
    <string name="history">ИСТОРИЯ</string>
    <string name="main_screen">ГЛАВНЫЙ ЭКРАН</string>
    <string name="go_back">ВЕРНУТЬСЯ</string>
    <string name="check_in">ОТМЕТИТЬСЯ</string>
    <string name="fill_your_email">Введите свой e-mail</string>
    <string name="you_checked">Вы отмечены!</string>
    <string name="thanks">СПАСИБО!</string>
    <string name="with_history">/ История</string>
    <string name="empty_redeems">Ваши полученные награды будут показаны тут</string>
    <string name="back">НАЗАД</string>
    <string name="you_checked_in">Вы отмечены!</string>
    <string name="new_reward">У вас новая награда!</string>
    <string name="reward_instruction">Чтобы получить эту награду покажите этот экран кассиру</string>
    <string name="you_registrated">Вы зарегистрированы!</string>
    <string name="registration_desc">Теперь вы можете накапливать посещения и обменивать их на награды</string>
    <string name="registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="enter_email">Введите свой e-mail</string>
    <string name="redeem">ПОЛУЧИТЬ</string>
    <string name="requeur_more">Еще: </string>
    <string name="title_bad_settings">Настройки сбиты</string>
    <string name="message_bad_settings">Данное приложение не настроено корректно. Обратитесь за помощью в тех.поддержку!</string>
    <string name="for_visits">За %s посещений</string>
    <string name="message_check_card">Проверьте карту которую вы используете, она не подходит</string>
    <string name="message_wrong_qr">Ваш QR-код не найден в нашей базе</string>
    <string name="message_wrong_email">Указан несуществующий e-mail</string>
    <string name="message_email_linked">Этот QR-код уже привязан к вашему e-mail</string>
    <string name="message_email_linked_to_another">Этот QR-код уже привязан к другому пользователю</string>
    <string name="message_qr_card_cooldown">Приносим свои извинения, но мы не может выдавать карты часто</string>
    <string name="message_unregistrated">Вы не зарегистрированы у нас</string>
    <string name="message_have_check_in">Вы уже отметились сегодня!</string>
    <string name="message_not_visits">У вас недостаточно визитов для получения награды</string>
    <string name="scan_instruction">Отсканируйте вашу карту или телефон</string>
    <string name="update_rewards">Награды были обновлены</string>
    <string name="before_logout"> сек. до выхода</string>
    <string name="privacy_policy"><u>Политика конфиденциальности</u></string>
    <string name="turms_of_use"><u>Правила использования</u></string>
    <string name="scaning_text">Отсканировав свою карту или ваш телефон вы соглашаетесь с Правилами использования и Политикой конфиденциальности.</string>
    <string name="cooldown_hint">Вы можете отмечаться каждые %d часов</string>
    <string name="check_in_with_user_email">"ОТМЕТИТЬСЯ С "</string>
    <string name="registration_with_user_email">"ЗАРЕГИСТРИРОВАТЬСЯ С "</string>
    <string name="cancel_redeem">ОТМЕНА</string>
    <string name="pause">ОТЛОЖИТЬ</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="dectived_qr">Данный QR-код был деактивирован</string>
</resources>
