<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ScanningActivity"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="15dp">


    <Button
        android:id="@+id/return_btn"

        android:layout_width="fill_parent"
        android:layout_height="@dimen/return_btn_height"

        android:background="@drawable/btn_blue"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/go_back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        style="@style/allBtn" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/scan_instruction"
                android:id="@+id/textView4"
                android:textColor="@color/table_each_second"
                android:textSize="24pt"
                android:textStyle="bold"

                android:shadowColor="@color/page_text"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="0.6"

                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/scaning_text"
                android:id="@+id/textView7"
                android:textColor="#d1d1d1"
                android:textSize="10pt"
                android:shadowColor="@color/page_text"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="0.6"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/turms_of_use"
                    android:id="@+id/turms_link"
                    android:textColor="#d1d1d1"
                    android:textSize="9pt"
                    android:shadowColor="@color/page_text"
                    android:clickable="true"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:onClick="onClickTurmsLink"
                    android:shadowRadius="0.6"
                    android:gravity="center|right"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/privacy_policy"
                    android:id="@+id/privacy_link"
                    android:textColor="#d1d1d1"
                    android:onClick="onClickPrivacyLink"
                    android:clickable="true"
                    android:textSize="9pt"
                    android:shadowColor="@color/page_text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="0.6"
                    android:gravity="center|left"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="21">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:id="@+id/scanning_layout">

                    <com.journeyapps.barcodescanner.CompoundBarcodeView
                        android:id="@+id/barcode_scanner"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"

                        android:layout_below="@+id/return_btn"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp">

                    </com.journeyapps.barcodescanner.CompoundBarcodeView>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/big_bottom_btn_layout_height"
                android:layout_weight="2">

                <Button
                    android:id="@+id/checkIn_btn"

                    style="@style/allBtn"

                    android:textSize="32sp"

                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/btn_blue"

                    android:text="@string/check_in_with_email"
                    android:layout_alignParentBottom="true"
                    android:layout_alignLeft="@+id/linearLayout"
                    android:layout_alignStart="@+id/linearLayout"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>